--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "framer-motion": "^10.16.5",
     "lucide-react": "^0.260.0",
     "next": "^13.4.10",
     "next-svgr": "^0.0.2",
