--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
