--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "css-loader": "^6.8.1",
     "framer-motion": "^10.16.5",
     "lucide-react": "^0.260.0",
     "next": "^13.4.10",
@@ -27,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "sharp": "^0.32.6",
+    "style-loader": "^3.3.3",
     "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
