--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       }
     ]
   },
+  "files": ["./glide.d.ts"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"],
   "moduleResolution": ["node_modules", ".next", "node"]
