--- a/package.json
+++ b/package.json
@@ -18,17 +18,32 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@glidejs/glide": "^3.6.0",
+    "@mui/material": "^5.15.3",
     "@types/glidejs__glide": "^3.6.5",
+    "@types/nodemailer": "^6.4.14",
+    "@types/react-google-recaptcha": "^2.1.8",
+    "axios": "^1.6.5",
     "clsx": "^1.2.1",
+    "debug": "^4.3.4",
+    "dotenv": "^16.3.1",
+    "encoding": "^0.1.13",
     "framer-motion": "^10.16.5",
+    "googleapis": "^129.0.0",
     "lucide-react": "^0.260.0",
     "next": "^13.4.10",
     "next-svgr": "^0.0.2",
+    "nodemailer": "^6.9.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^6.1.6",
     "sharp": "^0.32.6",
+    "supports-color": "^8.1.1",
     "swiper": "^11.0.5",
     "tailwind-merge": "^1.13.2"
   },
